--- a/app/views/items/_score.html.erb
+++ b/app/views/items/_score.html.erb
@@ -1,6 +1,8 @@
-<% for n in 0...score.round %>
-<i class="fa fa-star"></i>
-<% end %>
-<% for n in score.round...5 %>
-<i class="fa fa-star deactivated"></i>
-<% end %>
+<div class="score">  
+  <% for n in 0...score.round %>
+  <i class="fa fa-star"></i>
+  <% end %>
+  <% for n in score.round...5 %>
+  <i class="fa fa-star deactivated"></i>
+  <% end %>
+</div>
