--- a/app/views/order/show.html.erb
+++ b/app/views/order/show.html.erb
@@ -1,17 +1,26 @@
-<h1>注文明細</h1>
-<p>購入内容: </p>
-<ul>
-  <% @order.order_items.each do |order_item| %>
-  <li>
-    <%= order_item.item.name %>
-    <%= order_item.purchase_price.to_s(:delimited) %>円
-    <%= order_item.quantity %>個
-  </li>
-  <% end %>
-</ul>
-<p>
-  支払金額: <%= @order.total_amount.to_s(:delimited) %>円
-</p>
-<p>
-  注文日時: <%= @order.created_at.strftime("%Y-%m-%d(%a) %H:%M") %>
-</p>
+<div class="container">
+
+  <div class="card">
+
+    <h1>注文明細</h1>
+    <p>購入内容: </p>
+    <% @order.order_items.each do |order_item| %>
+    <div class="item-line">
+      <img src="/item_images/<%= order_item.item.image_name %>">
+      <%= order_item.item.name %>
+      <%= order_item.purchase_price.to_s(:delimited) %>円
+      <%= order_item.quantity %>個
+    </div>
+    <hr>
+    <% end %>
+    <p>
+      支払金額: <b><%= @order.total_amount.to_s(:delimited) %>円</b>
+    </p>
+    <hr>
+    <p>
+      注文日時: <%= @order.created_at.strftime("%Y/%m/%d (%a)  %H:%M") %>
+    </p>
+
+  </div>
+
+</div>
