refactoring　cart jquery

--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -18,4 +18,8 @@
   .cart-item-quantity-form {
     display: none;
   }
+  .cart-item-quantity-form-trigger {
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
