--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -27,8 +27,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :image, '画像' %>
-    <%= form.file_field :image, id: :item_image %>
+    <%= form.label :photo, '画像' %>
+    <%= form.file_field :photo, id: :item_photo %>
   </div>
 
   <div class="actions">
